# ocv

./: .cproject  .project  CMakeLists.txt
src/: CMakeLists.txt  gui.cpp  gui.hpp  main.cpp  monitor.cpp  monitor.hpp  sender.cpp  sender.hpp  server.cpp  tracker.cpp  tracker.hpp
